[website] fix for centering the table and keeping the horizontal scroll

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -671,7 +671,9 @@ text {
     padding: 0% 0% 5% 0%;
     margin: 0% 7%;
     */
+    /*
     margin: 0% 7% 4% 7%;
+    */
 }
 
 table {
@@ -683,6 +685,10 @@ table {
 .responsive-table {
     display: block;
     overflow-x: auto;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+    margin: 0 auto;
+    white-space: nowrap;
 }
 
 .responsive-table::-webkit-scrollbar {
